--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,5 @@
 body {
+	/* typography */
 	font-family: "Open Sans", sans-serif;
 }
 
@@ -8,9 +9,78 @@ h3,
 h4,
 h5,
 h6 {
+	/* typography */
 	font-family: "Staatliches", sans-serif;
 }
 
 ul.list-group {
+	/* box model */
 	min-height: 130px;
+}
+
+.dropover {
+	/* visual decorations */
+	background-color: rgba(0, 0, 0, 0.3);
+}
+
+.dropover-active {
+	/* visual decorations */
+	background-color: rgba(0, 0, 0, 0.9);
+}
+
+.bottom-trash {
+	/* typography */
+	font-family: "Staatliches", sans-serif;
+	font-size: 2.3rem;
+
+	/* visual decorations */
+	background-color: rgba(234, 0, 39, 0.7);
+	color: #f1f1f1;
+	opacity: 0;
+	transform: translateY(150px);
+	transition: all 0.5s ease-in-out;
+}
+
+.bottom-trash-drag {
+	/* visual decorations */
+	transform: translateY(0);
+	opacity: 1;
+}
+
+.bottom-trash-active {
+	/* visual decorations */
+	background-color: rgba(234, 0, 39, 1);
+}
+
+.btn-add,
+.btn-save {
+	/* visual decorations */
+	background-color: #fa8bff;
+	background-image: linear-gradient(
+		45deg,
+		#fa8bff 0%,
+		#2bd2ff 52%,
+		#2bff88 90%
+	);
+	background-size: 1px 100px;
+	background-position: 0 -10px;
+	transition: all 0.5s ease-out;
+}
+
+.btn-close,
+.btn-delete {
+	/* visual decorations */
+	background-color: #ea0028;
+	background-image: linear-gradient(180deg, #ff9a8b 0%, #ea0028 100%);
+	background-size: 1px 100px;
+	background-position: 0 -10px;
+	transition: all 0.5s ease-out;
+}
+
+.btn-add:hover,
+.btn-save:hover,
+.btn-close:hover,
+.btn-delete:hover {
+	/* visual decorations */
+	background-position: 1px -50px;
 }
